--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -242,53 +242,27 @@
 			<h2><i class="fa fa-star"></i><span>Sponsor</span></h2>
 			<div class="container-fluid">
 			<br><br>
-			<ul class="sponsor-list large-sponsor row"><!-- /.large-sponsor -->
-                <div class="hidden-xs">
+			<ul class="sponsor-list row">
 				<% sponsors.forEach(function(sponsor){ %>
 				<% if(sponsor.class=="session"){%>
-					<li><a href="<%=sponsor.link %>" target="_blank"><img width="110%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
+					<li class="col-xs-6"><a href="<%=sponsor.link %>" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
 				<% }%>
 				<% })%>
-                </div>
-			</ul>
-
-            <ul class="sponsor-list large-sponsor row">
-                <div class="visible-xs">
-                <% sponsors.forEach(function(sponsor){ %>
-                <% if(sponsor.class=="session"){%>
-                    <li><a href="<%=sponsor.link %>" target="_blank"><img width="150%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
-                <% }%>
-                <% })%>
-                </div>
-            </ul><!-- /.large-list -->
-
-            <ul class="sponsor-list middle-sponsor row"><!-- /.middle-sponsor -->
-                <div class="hidden-xs">
-                <% sponsors.forEach(function(sponsor){ %>
-                <% if(sponsor.class=="booth"){%>
-                <li><a href="<%=sponsor.link %>" target="_blank"><img width="100%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
-                <% }%>
-                <% })%>
-                </div>
-            </ul>
-
-            <ul class="sponsor-list middle-sponsor row">
-                <div class="visible-xs">
-                <% sponsors.forEach(function(sponsor){ %>
-                <% if(sponsor.class=="booth"){%>
-                <li class="col-xs-6"><a href="<%=sponsor.link %>" target="_blank"><img width="120%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
-                <% }%>
-                <% })%>
-                </div>
-			</ul><!-- /.middle-sponsor -->
-
-			<ul class="sponsor-list small-sponsor row"><!-- /.small-sponsor -->
+			</ul><!-- /.sponsor-list -->
+			<ul class="sponsor-list row">
+				<% sponsors.forEach(function(sponsor){ %>
+				<% if(sponsor.class=="booth"){%>
+					<li class="col-xs-6"><a href="<%=sponsor.link %>" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
+				<% }%>
+				<% })%>
+			</ul><!-- /.sponsor-list -->
+			<ul class="sponsor-list row">
 				<% sponsors.forEach(function(sponsor){ %>
 				<% if(sponsor.class==undefined){%>
 				<li class="col-xs-6"><a href="<%=sponsor.link %>" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
 				<% }%>
 				<% })%>
-			</ul><!-- /.small-sponsor -->
+			</ul><!-- /.sponsor-list -->
             </div>
 			<br><br>
 			<a href="http://the-frontend-conference-2016.peatix.com/" class="kfugBtn hvr-back-pulse">
