--- a/sass/_sponsor.scss
+++ b/sass/_sponsor.scss
@@ -1,43 +1,10 @@
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 
-.large-sponsor{
-    //li{
-    //  display: inline-block;
-    //}
-  padding-left:0;
-    .hidden-xs {
-      display: inline-block;
-      height: 180px;
-      padding: 0;
-    }
-    .visible-xs{
-      display: block;
-      margin: 0 auto;
+.sponsor-list{
+    li{
+        margin-top: 20px;
+        display: table-cell;
+        vertical-align: middle;
     }
 }
-
-.middle-sponsor{
-  li{
-    display: inline-block;
-  }
-  li:first-child{
-    left: -10px;
-  }
-  li:last-child{
-    top: 10px;
-  }
-  .hidden-xs{
-    height: 130px;
-    padding:0;
-  }
-  .visible-xs{
-    .col-xs-6{
-      padding-left: 0;
-      margin-left: 0;
-    }
-  }
-}
-
-
-
 @include kfugBtn();
