--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -206,36 +206,15 @@
 				<% })%>
 			</ul>
 			<br><br>
+			<iframe src="https://drive.google.com/a/chatbox-inc.com/file/d/0B70HXMesa1VnS3BpLWJVQnE1UE0/preview" width="100%" height="500px"></iframe>
+
+			<p  style="text-align: right"><a href="https://drive.google.com/file/d/0B70HXMesa1VnS3BpLWJVQnE1UE0/view?usp=sharing" target="_blank">PDFのダウンロード版希望の方はこちら</a></p>
+
+			<br><br>
 			<p style="text-align: right"><a href="speaker.html" target="_blank">セッション情報一覧はこちら</a></p>
 			<!-- /.list-speaker -->
 		</div><!-- /.inner -->
 	</section><!-- /#speaker -->
-
-	<section id="faq" class="cont">
-		<div class="inner">
-			<h2><i class="fa fa-question"></i><span>FAQ</span></h2>
-
-			<p class="cs">coming soon!</p><!-- /.cs -->
-
-			<!-- <dl class="faq-col">
-				<dt>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dt>
-				<dd>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dd>
-			</dl>
-			<dl class="faq-col">
-				<dt>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dt>
-				<dd>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dd>
-			</dl>
-			<dl class="faq-col">
-				<dt>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dt>
-				<dd>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dd>
-			</dl>
-			<dl class="faq-col">
-				<dt>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dt>
-				<dd>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dd>
-			</dl> -->
-		</div><!-- /.inner -->
-	</section><!-- /#faq -->
-
 
 	<section id="sponsor" class="cont">
 		<div class="inner">
